// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modular-css-aliases should be usable as a modular-css resolver 1`] = `
Object {
  "fixtures/one/sub/sub.css": Object {
    "sub": "sub",
  },
  "fixtures/start.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
  "fixtures/two/two.css": Object {
    "two": "two",
  },
}
`;

exports[`modular-css-aliases should fall through to the default resolver 1`] = `
Object {
  "fixtures/one/one.css": Object {
    "rule": "two rule",
    "sub": "\\"sub\\"",
  },
  "fixtures/one/sub/sub.css": Object {
    "sub": "sub",
  },
  "fixtures/two/two.css": Object {
    "two": "two",
  },
}
`;
